<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Scores"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/scoreCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/scores"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Word"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/wordCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/word"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <Button
        android:id="@+id/repeatWordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RepeatWord"
        android:layout_gravity="center_horizontal"
        android:enabled="false"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp" >

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tips"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tipCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/tip"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>

        <Button
            android:id="@+id/tipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center_horizontal"
            android:enabled="false"/>

    <EditText
        android:id="@+id/tipInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/answerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answer"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        android:enabled="false"/>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/nextWordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

</LinearLayout>